--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "element-plus": "^2.3.2",
     "lodash": "^4.17.21",
     "three": "^0.151.3",
@@ -21,6 +22,7 @@
     "eslint": "^8.37.0",
     "eslint-plugin-vue": "^9.10.0",
     "sass": "^1.61.0",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-singlefile": "^0.13.5"
   }
 }
